--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,15 @@ p {
 
   position: relative;
 
-  background-color: black;
   color: white;
-  font-size: 4vw;
+}
+
+.Shadow {
+  position: absolute;
+  z-index: 1;
+  height: 100vh;
+  width: 200vw;
+  box-shadow: inset 0 -6rem 15rem 0 black;
 }
 
 .BackgroundImage {
@@ -29,30 +35,26 @@ p {
 }
 
 .Info {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin: 3rem;
+  z-index: 2;
+  opacity: 0.7;
 }
 
 .DateTime {
-  grid-column: 3;
-  grid-row: 2;
-
-  opacity: 0.8;
+  font-size: 7rem;
   text-shadow: 0 0 0 black, 0 0 2em black, 0 0 1rem black;
 }
 
 .Weather {
-  grid-column: 3;
-  grid-row: 3;
-
-  opacity: 0.8;
+  font-size: 2.5rem;
+  margin-right: 2rem;
   text-shadow: 0 0 0 black, 0 0 2em black, 0 0 1rem black;
 }
 
 .Weather .temperature {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
 }
