--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,8 @@ p {
 .Shadow {
   position: absolute;
   z-index: 1;
-  height: 100vh;
-  width: 200vw;
+  height: 100%;
+  width: 100%;
   box-shadow: inset 0 -6rem 15rem 0 black;
 }
 
