--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   overflow: hidden;
-  font-family: 'Lato', sans-serif;
+  font-family: 'MetropolisMedium', sans-serif;
 }
 
 p {
@@ -22,7 +22,7 @@ p {
 }
 
 .Shadow {
-  background: linear-gradient(to top,rgba(0,0,0,0.9),rgba(0,0,0,0.1) 100%);
+  background: linear-gradient(to top, rgba(0,0,0,0.8), rgba(0,0,0,0.1) 70%);
   width: 100vw;
   height: 100vh;
   position: absolute;
