--- a/src/crt.css
+++ b/src/crt.css
@@ -1,77 +1,11 @@
-@keyframes flicker {
-  0% {
-    opacity: 0.39546;
-  }
-  5% {
-    opacity: 0.75929;
-  }
-  10% {
-    opacity: 0.88474;
-  }
-  15% {
-    opacity: 0.05654;
-  }
-  20% {
-    opacity: 0.31253;
-  }
-  25% {
-    opacity: 0.15757;
-  }
-  30% {
-    opacity: 0.7854;
-  }
-  35% {
-    opacity: 0.54038;
-  }
-  40% {
-    opacity: 0.36191;
-  }
-  45% {
-    opacity: 0.49522;
-  }
-  50% {
-    opacity: 0.17694;
-  }
-  55% {
-    opacity: 0.68477;
-  }
-  60% {
-    opacity: 0.11919;
-  }
-  65% {
-    opacity: 0.24997;
-  }
-  70% {
-    opacity: 0.72952;
-  }
-  75% {
-    opacity: 0.87543;
-  }
-  80% {
-    opacity: 0.22595;
-  }
-  85% {
-    opacity: 0.42807;
-  }
-  90% {
-    opacity: 0.77202;
-  }
-  95% {
-    opacity: 0.51568;
-  }
-  100% {
-    opacity: 0.67759;
-  }
-}
-
-.crtFlicker {
+.crtFilter {
   height: 150vh;
   width: 100%;
   overflow:hidden;
   z-index: 2;
 }
 
-.crtFlicker::before {
+.crtFilter::before {
   content: " ";
   display: block;
   position: absolute;
@@ -82,5 +16,4 @@
   background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
-  animation: flicker 0.15s infinite;
 }
